Fix navigation-bar vertical align

--- a/Tools/resources/app.css
+++ b/Tools/resources/app.css
@@ -138,6 +138,7 @@ input[type="checkbox"]:checked::after {
 
 /* NAVIGATION BAR */
 .navigation-bar {
+	top: 0 !important;
 	background-color: #fafafa;
 	border-bottom: 1px solid #d6d6d6;
 }
